fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,14 @@
 *{
     text-decoration: none;
     list-style: none;
-    margin: 0;
-    padding: 0;
 } 
 body{
     font-family: "Alegreya", serif;
-    overflow: hidden;
-    height: 200vh;
-    width: 100%;
-    scrollbar-width: none; 
+    /* overflow: hidden; */
+}
+.container{
+    overflow-x: hidden; 
+    overflow-y: hidden;
 }
 /* ****************common********************* */
 img{
@@ -210,9 +209,10 @@ p{
 #home{
     background-image: url("../images/drew-coffman-1872.jpg");
     background-size: 100% 100%;
-    background-position: center center;
+    /* background-position: center center; */
     background-attachment: fixed;
     height: 110vh;
+    overflow: auto;
 }
 #home .caption{
     color: #ffff;
